# del-geo

./: .clang-format  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: CI.yml
del-geo-core/: Cargo.toml
del-geo-core/src/: aabb.rs  aabb2.rs  aabb3.rs  bezier_cubic.rs  bezier_quadratic.rs  ccd.rs  ccd2.rs  ccd3.rs  curve_linear_coords.rs  edge.rs  edge2.rs  edge3.rs  hex.rs  lib.rs  line2.rs  mat2_col_major.rs  mat2_sym.rs  mat2x3_col_major.rs  mat3.rs  mat3_array_of_array.rs  mat3_array_of_cols.rs  mat3_col_major.rs  mat3_row_major.rs  mat3_sym.rs  mat3x4_col_major.rs  mat4.rs  mat4_col_major.rs  matn.rs  matn_col_major.rs  matn_row_major.rs  ndc.rs  obb2.rs  obb3.rs  plane.rs  polynomial_root.rs  prism.rs  pyramid.rs  quad3.rs  quadrature_line.rs  quadrature_tri.rs  (+18 more)
del-geo-cpp-headers/: Cargo.toml
del-geo-cpp-headers/src/: aabb.h  aabb2.h  aabb3.h  edge2.h  edge3.h  hex.h  lib.rs  mat2_sym.h  mat2x3_col_major.h  mat3_array_of_rows.h  mat3_col_major.h  mat4_col_major.h  prism.h  pyramid.h  quaternion.h  tet.h  tri2.h  tri3.h  vec2.h  vec3.h
del-geo-nalgebra/: Cargo.toml
del-geo-nalgebra/src/: aabb2.rs  bezier_cubic.rs  bezier_quadratic.rs  ccd.rs  ccd2.rs  ccd3.rs  edge.rs  edge2.rs  edge3.rs  lib.rs  line2.rs  line3.rs  mat3.rs  mat4.rs  plane.rs  sphere.rs  tet.rs  tri2.rs  tri3.rs  vec2.rs  vec3.rs
src/: aabb.rs  aabb2.rs  aabb3.rs  bezier_cubic.rs  bezier_quadratic.rs  ccd.rs  edge.rs  edge2.rs  edge3.rs  geo_edge.rs  geo_tet.rs  geo_tri.rs  kdtree2.rs  lib.rs  line.rs  line2.rs  line3.rs  mat2.rs  mat3.rs  mat4.rs  matn.rs  plane.rs  polygon.rs  polyline.rs  sphere.rs  tet.rs  tri.rs  tri2.rs  tri3.rs  vec2.rs  vec3.rs
