[workspace]
members = ["del-geo-core", "del-geo-nalgebra"]
resolver = "2"

[workspace.package]
version = "0.1.32"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
description = "2D/3D geometry utility codes"
documentation = "https://docs.rs/del_geo"
license = "MIT"
repository = "https://github.com/nobuyuki83/del-geo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
num-traits = "0.2.19"
nalgebra = "0.33.0"
num-complex = "0.4.6"
rand = "0.8.5"
arrayref = "0.3.7"
array-macro = "2.1.8"
itertools = "0.13.0"
ordered-float = "4.2.2"
rand_chacha = "0.3.1"
# internal
del-geo-nalgebra = { path="del-geo-nalgebra"}
del-geo-core = { path="del-geo-core"}

# external my library
# del-msh-core = {path = "../del-msh/del-msh-core"}
del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git", version = "0.1.35"}



