[workspace]
members = [
    "del-geo-core",
    "del-geo-nalgebra",
    "del-geo-cpp-headers"]
resolver = "2"

[workspace.package]
version = "0.1.36"
edition = "2024"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
description = "2D/3D geometry utility codes"
license = "MIT"
repository = "https://github.com/nobuyuki83/del-geo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
num-traits = "0.2.19"
nalgebra = "0.33.0"
num-complex = "0.4.6"
rand = "0.9.1"
itertools = "0.14.0"
rand_chacha = "0.9.0"
# internal
del-geo-nalgebra = { path="del-geo-nalgebra"}
del-geo-core = { path="del-geo-core"}

# external my library
# del-msh-core = {path = "../del-msh/del-msh-core"}
del-msh-cpu = { git = "https://github.com/nobuyuki83/del-msh.git"}



