[package]
name = "del-geo-core"
description = "2D/3D geometry utility codes"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {workspace = true}
rand = {workspace = true}
arrayref = {workspace = true}
array-macro = {workspace = true}
ordered-float = {workspace = true}
itertools = {workspace = true}
num-complex = {workspace = true}

[dev-dependencies]
nalgebra = {workspace = true}
del-geo-nalgebra = {workspace = true}
rand_chacha = {workspace = true}
del-msh-core = {workspace = true}
