[package]
name = "del-geo-nalgebra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {workspace = true}
nalgebra = {workspace = true}
rand = {workspace = true}
# del-geo-core = {path = "../del-geo-core"}
# del-geo-core = "0.1.32"
del-geo-core = {workspace = true}

[dev-dependencies]
rand_chacha = {workspace = true}
